# Fitness_ai_part

./: .dockerignore  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  dummy_data.json  file_analysis_response.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: config.py  main.py
app/api/: __init__.py
app/api/routes/: analysis.py  chat.py  health.py  strava.py
app/model/: llm.py
app/schemas/: analysis_request.py  analysis_response.py  chat.py  improvement_plan.py  race_analysis.py  strava.py  training_insights.py
app/services/: analysis_cache_service.py  analysis_generator.py  chat_service.py  data_loader.py  metrics_engine.py  openai_service.py  performance_analyzer.py  strava_service.py
app/utils/: database.py  prompt.py  training_analysis.txt
