[project]
name = "lionscull-fitness-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]
